# copilot-session-usage

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  uv.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/guidelines/: git-commit-message.guideline.md  knowledge-base.guidelines.md
.github/workflows/: ci.yml  publish.yml  refresh-pricing.yml  release-notes.yml  release.yml
docs/internal/: automated_release_proces.md
docs/source/: api.md  conf.py  index.md  installation.md
knowledge/: index.md  log.md
knowledge/_schema/: Base.schema.yaml  Concept.schema.yaml  Experiment.schema.yaml  Finding.schema.yaml  Playbook.schema.yaml  Principle.schema.yaml  Reference.schema.yaml  Structure.schema.yaml
knowledge/concepts/: copilot-cli.md  cost-optimization.md  index.md  overview.md  session-cost-analysis.md  session-discovery-algorithm.md  subagent-cost-tracking.md  threshold-based-pricing.md  vscode-copilot-extension.md
knowledge/experiments/: index.md  verify-subagent-cost-attribution.md
knowledge/findings/: 2026.07.02-00.00-subagent-logs-runsubagent-prefix.md  2026.07.02-22.00-title-generation-not-counted-as-model-turn.md  2026.07.02-23.00-cache-write-approximation.md  2026.07.13-14.27-release-notes-overreported-maintainer-changes.md  cache-write-cost-not-tracked.md  index.md  subagent-logs-use-runsubagent-prefix.md  title-jsonl-not-counted-as-model-turn.md
knowledge/guides/: index.md  (+3 more)
scripts/: extract_release_notes.py  refresh_pricing.py  validate_release_notes.py
tests/: conftest.py  test_api.py  test_cli.py  test_core.py  test_coverage_gaps.py  test_git.py  test_release_notes.py  test_rendering.py  test_vscode.py  test_vscode_platform.py
(+41 files in other folders)
